// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Collapsible component renders correctly complete 1`] = `
<Collapsible
  actions={
    <span
      className="is-size-4 sp-color-sun sp-update"
      onClick={[Function]}
    />
  }
  expanded={true}
  title="test fileName"
>
  <section
    className="mb-5"
  >
    <span
      className="has-text-white"
    >
      YOU_HAVE_THE_LATEST_FIRMWARE test fileName
    </span>
  </section>
</Collapsible>
`;

exports[`File Collapsible component renders correctly while downloading 1`] = `
<Collapsible
  actions={null}
  expanded={true}
  title="test fileName"
>
  <section
    className="mb-5"
  >
    <span
      className="has-text-white"
    />
  </section>
  <section
    className="mt-20 mb-10"
  >
    <p
      className="mb-5"
    >
      <span
        className="mr-10 has-text-white has-text-weight-bold"
      >
        80
        %
      </span>
      DOWNLOADING
      <span
        className="is-pulled-right has-text-white has-text-weight-bold"
      >
        40
         MB
      </span>
    </p>
    <progress
      className="progress is-tiny is-white"
      max="100"
      value={80}
    />
  </section>
</Collapsible>
`;

exports[`File Collapsible component renders correctly with no props 1`] = `
<Collapsible
  actions={
    <span
      className="is-size-4 sp-color-sun sp-download"
      onClick={[Function]}
    />
  }
  expanded={true}
  title=""
>
  <section
    className="mb-5"
  >
    <span
      className="has-text-white"
    >
      <span
        className="has-text-white has-text-weight-bold"
      >
        CHECKING_LATEST_FIRMWARE_VERSION
      </span>
    </span>
  </section>
</Collapsible>
`;
